versioned_docs/version-0.6.0/function-mesh-worker/reference/general-option.md
---
title: General options
category: function-mesh-worker
id: general-option
---

You can customize the Function Mesh Worker service using `functionsWorkerServiceCustomConfigs` in the `functions_worker.yml` manifest. This table outlines available configurations.

| Name                                              | Type                                          | Required | Default                                                  | Description                                                                                                                                                                                                                                                                   |
|---------------------------------------------------|-----------------------------------------------|----------|----------------------------------------------------------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| `uploadEnabled`                                   | boolean                                       | No       | `false`                                                    | Enable users to upload custom JAR or NAR packages of Pulsar functions, source, or sink connectors.                                                                                                                                                                            |
| `functionEnabled`                                 | boolean                                       | No       | `true`                                                     | Enable the Pulsar Function API endpoint.                                                                                                                                                                                                                                      |
| `sinkEnabled`                                     | boolean                                       | No       | `true`                                                     | Enable the sink API endpoint.                                                                                                                                                                                                                                                 |
| `sourceEnabled`                                   | boolean                                       | No       | `true`                                                     | Enable the source API endpoint.                                                                                                                                                                                                                                               |
| `extraDependenciesDir`                            | string                                        | No       | /pulsar/lib/                                             | The directory for dropping extra function dependencies.                                                                                                                                                                                                                       |
| `volumeMounts`                                    | List < V1VolumeMount >                        | No       | [] (empty string)                                        | [V1VolumeMount](https://github.com/kubernetes-client/java/blob/master/kubernetes/docs/V1VolumeMount.md) describes a mounting of a Volume within a container.                                                                                                                  |
| `volumes`                                         | List < V1Volume >                             | No       | [] (empty string)                                        | The list of [V1Volume](https://github.com/kubernetes-client/java/blob/master/kubernetes/docs/V1Volume.md) that can be mounted by containers belonging to the Pulsar Function or connector Pod.                                                                                |
| `ownerReference`                                  | V1OwnerReference                              | No       | null                                                     | Default configurations of the [`ownerReference`](https://github.com/kubernetes-client/java/blob/master/kubernetes/docs/V1OwnerReference.md).                                                                                                                                  |
| `allowUserDefinedServiceAccountName` (deprecated) | boolean                                       | No       | `false`                                                    | Enable users to change the service account name with `custom-runtime-options`. This option is depreciated starting with Function Mesh v0.3.0. You can use the `serviceAccountName` in the trusted mode to set the service account.                                                    |
| `defaultServiceAccountName`                       | string                                        | No       | "" (empty string)                                        | The name of the service account to run the Pulsar Function or connector Pod.                                                                                                                                                                                                  |
| `imagePullPolicy`                                 | string                                        | No       | "IfNotPresent"                                           | The image pull policy for images to run Pulsar Function instances. By default, it is set to `IfNotPresent`.                                                                                                                                                                   |
| `functionRunnerImages`                            | Map < String, String >                        | No       | {} (empty string)                                        | The runner image to run the Pulsar Function instances.                                                                                                                                                                                                                        |
| `imagePullSecrets`                                | List< V1LocalObjectReference >                | No       | [] (empty string)                                        | An optional list of references to secrets in the same namespace to pull images used by `PodSpec`.                                                                                                                                                                             |
| `labels`                                          | Map < String, String >                        | No       | {} (empty string)                                        | Specify the labels being attached to a Pod that is created by the Function Mesh Operator for the cluster.                                                                                                                                                                     |
| `functionLabels`                                  | Map < String, String >                        | No       | {} (empty string)                                        | Specify the labels being attached to a Function's Pod. When both `functionLabels` and `labels` are specified, `functionLabels` overrides `labels`.                                                                                                                            |
| `sinkLabels`                                      | Map < String, String >                        | No       | {} (empty string)                                        | Specify the labels being attached to a Sink's Pod. When both `sinkLabels` and `labels` are specified, `sinkLabels` overrides `labels`.                                                                                                                                        |
| `sourceLabels`                                    | Map < String, String >                        | No       | {} (empty string)                                        | Specify the labels being attached to a Source's Pod. When both `sourceLabels` and `labels` are specified, `sourceLabels` overrides `labels`.                                                                                                                                  |
| `annotations`                                     | Map < String, String >                        | No       | {} (empty string)                                        | Specify the annotations being attached to a Pod that is created by the Function Mesh Operator for the cluster.                                                                                                                                                                |
| `functionAnnotations`                             | Map < String, String >                        | No       | {} (empty string)                                        | Specify the annotations being attached to a Function's Pod. When both `functionAnnotations` and `annotations` are specified, `functionAnnotations` overrides `annotations`.                                                                                                   |
| `sinkAnnotations`                                 | Map < String, String >                        | No       | {} (empty string)                                        | Specify the annotations being attached to a Sink's Pod. When both `sinkAnnotations` and `annotations` are specified, `sinkAnnotations` overrides `annotations`.                                                                                                               |
| `sourceAnnotations`                               | Map < String, String >                        | No       | {} (empty string)                                        | Specify the annotations being attached to a Source's Pod. When both `sourceAnnotations` and `annotations` are specified, `sourceAnnotations` overrides `annotations`.                                                                                                         |
| `env` | Map < String, String > | No | {} (empty string) | Specify the environment variables being attached to a Pod that is created by the Function Mesh Operator for the cluster. |
| `functionEnv` | Map < String, String > | No | {} (empty string) | Specify the environment variables being attached to a Function's Pod.  When both `functionEnv` and `env` are specified, `functionEnv` overrides `env`. |
| `sinkEnv` | Map < String, String > | No | {} (empty string) | Specify the environment variables being attached to a Sink's Pod.  When both `sinkEnv` and `env` are specified, `sinkEnv` overrides `env`. |
| `sourceEnv` | Map < String, String > | No | {} (empty string) | Specify the environment variables being attached to a Function's Pod.  When both `sourceEnv` and `env` are specified, `sourceEnv` overrides `env`. |
| `functionInitContainers`                          | List< V1alpha1FunctionSpecPodInitContainers > | No       | [] (empty string)                                        | Specify the `initContainers` that is attached to the function Pod.                                                                                                                                                                                                            |
| `sourceInitContainers`                            | List< V1alpha1SourceSpecPodInitContainers >   | No       | [] (empty string)                                        | Specify the `initContainers` that is attached to the Source Pod.                                                                                                                                                                                                              |
| `sinkInitContainers`                              | List< V1alpha1SinkSpecPodInitContainers >     | No       | [] (empty string)                                        | Specify the `initContainers` that is attached to the Sink Pod.                                                                                                                                                                                                                |
| `jobNamespace`                                    | String                                        | No       | `default`                                                | The Kubernetes namespace to run the function instances.                                                                                                                                                                                                                       |
| `defaultResources`                                | Resources                                     | No       | <br />- CPU: 1 core <br />- RAM: 1GB <br /> - Disk: 10GB | The default resources for each function instance. Available options are CPU (in unit of cores), RAM ( in unit of bytes), and disk (in unit of bytes).                                                                                                                         |
| `enableTrustedMode`                               | boolean                                       | No       | `false`                                                  | Enable the trusted mode. When the trusted mode is enabled, you can override some default configurations across the Pulsar cluster. For details about options supported in the trusted mode, see [customizable options](/function-mesh-worker/reference/customizable-option.md). |